--- a/.github/ISSUE_TEMPLATE/----------.md
+++ b/.github/ISSUE_TEMPLATE/----------.md
@@ -1,14 +1,14 @@
 ---
-name: "버그 발생"
+name: 버그 발생
 about: 버그 보고서
 
 ---
 
 **버그 설명**
-어떤 버그가 있는지 정확히 설명해주세요.
+어떤 버그가 있는지 정확히 설명해주세요!
 
 **버그 발생 조건**
-이렇게 하면 버그가 발생해요 :
+이렇게 하면 버그가 발생해요! :
 1. 여기로 가서...
 1. ~~
 
@@ -23,5 +23,5 @@ about: 버그 보고서
  - OS: ~~
 
 **추가로 할 말**
-추가로 할 말이 있으면 적어주세요
+추가로 할 말이 있으면 적어주세요!
 없으면 스킵!
